[project]
name = "gh-os"
version = "0.1.0"
description = "github OSINT PII scanner"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
gh-os = "gh_os:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
